--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Syncopate:wght@400;700&display=swap');
+
+:root {
+  --background-color: black;
+  --primary-font-color: #bababa;
+  --secondary-font-color: #d9d9d9;
+  --title-font-color: #28282B;
+  --secondary-font: 'Bai Jamjuree', sans-serif;
+  --featured-background-color: #d6d6d6;
+  --text-stroke-color: black;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Syncopate', sans-serif;
+  background-color: var(--background-color);
+  color: var(--primary-font-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +22,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
