--- a/src/components/Cursor/cursor.css
+++ b/src/components/Cursor/cursor.css
@@ -1,10 +1,11 @@
 .cursor {
     position: absolute;
     border-radius: 50%;
-    width: 15px;
-    height: 15px;
+    width: 55px;
+    height: 55px;
+    mix-blend-mode: difference;
     background-color: var(--primary-font-color);
-    transition: 0.4s;
+    transition: 0.6s;
     transition-delay: -50ms;
     pointer-events: none;
     z-index: 99;
