--- a/src/components/preloader/preloader.css
+++ b/src/components/preloader/preloader.css
@@ -1,17 +1,17 @@
 .preloader-screen {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* height: 100vh;
+    width: 100vw; */
     position: relative;
 }
 .preloader-screen .middle-content {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 50vw;
+    max-height: 50vh;
     cursor: pointer;
     scale: 0.8;
-    position: relative;
+    position: absolute;
+    top: 45vh;
+    left: 45vw;
+    transform: translate(-50%, -50%);
 }
 .preloader-screen .logo-img-wrapper{
     overflow: hidden;
@@ -22,8 +22,17 @@
 }
 .preloader-screen .my-name {
     position: absolute;
-    top: 5%;
+    top: 5vh;
     left: 10%;
+    font-size: 10px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.preloader-screen .year {
+    position: absolute;
+    top: 5vh;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 10px;
     font-weight: 700;
     text-transform: uppercase;
