--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Syncopate:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;0,6..96,600;0,6..96,700;0,6..96,800;0,6..96,900;1,6..96,400;1,6..96,500;1,6..96,600;1,6..96,700;1,6..96,800;1,6..96,900&display=swap');
 
 :root {
   --background-color: black;
@@ -6,7 +7,8 @@
   --secondary-font-color: #d9d9d9;
   --title-font-color: #28282B;
   --secondary-font: 'Bai Jamjuree', sans-serif;
-  --featured-background-color: #d6d6d6;
+  /* --featured-background-color: #d6d6d6; */
+  --featured-background-color: #bababa;
   --text-stroke-color: black;
 }
 
