--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -147,3 +147,23 @@
     padding-bottom: 20vh;
     transform: translateY(-20);
 }
+
+/* navbar section */
+.navbar-container {
+    position: absolute;
+    right: 10%;
+    top: 5vh;
+}
+.navbar-container a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: 700;
+    font-size: 10px;
+    /* opacity: 1; */
+    text-transform: uppercase;
+}
+.navbar-container ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
