--- a/src/components/ContactMe/contact.css
+++ b/src/components/ContactMe/contact.css
@@ -38,6 +38,19 @@
     max-height: 100%;
     max-width: 100%;
 }
+.contact-phrase {
+    position: absolute;
+    top: 45%;
+    text-transform: none;
+    width: 25px;
+    line-height: 12px;
+    z-index: 9;
+    right: 30%;
+    font-weight: 800;
+    font-family: 'Syncopate', sans-serif;
+    color: var(--primary-font-color);
+    font-size: 12px;
+}
 .lineChildren {
     transform: translate(0, 100%);
 }
@@ -46,4 +59,25 @@
 }
 .contact-stn .is-reveal {
     opacity: 1;
+}
+.contact-stn .arrow-link-wrapper {
+    display: flex;
+    position: absolute;
+    overflow: hidden;
+    right: 0%;
+}
+.contact-stn .arrow-link-primary-wrapper {
+    position: absolute;
+    bottom: 20%;
+    right: 25%;
+    border-radius: 50%;
+    width: 5vw;
+    height: 5vw;
+    border: 1px solid #bababa;
+    overflow: hidden;
+}
+
+.contact-stn .arrow-link-wrapper i {
+    font-size: 5vw;
+    color: rgb(186, 186, 186, .8);
 }
