--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -2,7 +2,6 @@
     /* height: 100vh;
     width: 100vw; */
     position: relative;
-    cursor: none;
 }
 .home-page .middle-content {
     max-width: 50vw;
@@ -67,11 +66,10 @@
     font-weight: 700;
     font-family: var(--secondary-font);
     user-select: none;
-    padding-top: 20vh;
+    padding-top: 40vh;
 }
 .line-1 {
-    display: flex;
-    align-items: center;
+overflow: hidden;
 }
 .lineChildren {
     transform: translate(0, 100%);
@@ -142,7 +140,6 @@
     text-align: center;
     line-height: 1em;
     font-weight: 500;
-    opacity: 0;
     padding: 0 3rem;
     padding-bottom: 20vh;
     transform: translateY(-20);
